@@ -145,6 +145,9 @@ Other Changes
   even after all local replicas of that collection have been removed.
   (Scott Blum via shalin)
 
+* SOLR-7902: Split out use of child timers from RTimer to a sub-class
+  (Ramkumar Aiyengar)
+
 ==================  5.3.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
